--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #e7dede;
+    background-color: #d4c5c5;
     margin: 0;
     padding: 0;
     display: flex;
@@ -8,13 +8,16 @@ body {
     justify-content: center;
     height: 100%;
 }
+h1{
+    text-align: center;
+}
 
 .container {
     background-color: #fff;
     padding: 20px;
     margin-top: 20px;
     border-radius: 8px;
-    width: 670px;
+    width: 700px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -31,8 +34,10 @@ ul {
     border: 2px solid #c0c0c0;
     padding: 10px;
     border-radius: 8px;
+    margin: 4px;
     width: 300px;
     overflow: hidden;
+    font-size: 21px;
 }
 
 .img {
@@ -54,32 +59,51 @@ ul {
     border-radius: 4px;
     cursor: pointer;
 }
-.button{
+.button1{
     background-color: #4caf50;
     color: #fff;
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin: 10px;
 
 }
 
 .button-container button.edit {
     background-color: #ff9800;
 }
+.button-container button.delete {
+    background-color: #ff2828;
+}
 
 input[type="file"] {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9;
     cursor: pointer;
 }
 
 input[type="file"]:focus {
     outline: none;
-    border-color: #66afe9;
+    border-color: #4caf50;
     box-shadow: 0 0 5px #66afe9;
+}
+
+#task{
+    width: 268px;
+    height: 28px;
+    font-size: 20px;
+    padding: 3px;
+    padding-left: 7px;
+    margin: 3px;
+    outline: none;
+    border: 2px solid #ccc;
+}
+#task:focus{
+    
+  border: 2px solid #4caf50;
+  border-radius: 4px 4px 2px 2px;
 }
 
 .img-preview {
@@ -111,12 +135,17 @@ input[type="file"]:focus {
     width: 200px;
 }
 
+.gg{
+    margin: 3px;
+    font-size: 20px;
+    font-weight: 700;
+}
 @media screen and (max-width: 600px) {
     .container {
         width: 86%;
     }
     .card{
-        width: 42%;
+        width: 93%;
     }
     #taskForm{
         display: flex;
@@ -124,8 +153,5 @@ input[type="file"]:focus {
         justify-content: center;
         flex-direction: column;
 
-    }
-    .gg{
-        margin: 4px;
     }
 }
